translation service initialised

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.9",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "aos": "^2.3.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
